--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -20,7 +20,7 @@ html, body {
 
 .gradient {
   background: #707d86 linear-gradient(135deg, #000000, #707d86) no-repeat;
-  min-width: 395px;
+  min-width: 375px;
   min-height: 100vh;
   color: #fff;
 }
